update mybatis-generator version